# AuditorFlet

./: README.md  main.py  pyproject.toml
codex/: AGENTS.md
suitescript_auditor/: __init__.py  app.py
suitescript_auditor/core/config/: defaults.py  loader.py  secure_store.py
suitescript_auditor/core/docs/: index_builder.py  markdown.py  writer.py
suitescript_auditor/core/docs/templates/: audit_file.md.j2  (+2 more)
suitescript_auditor/core/git/: providers.py  publish.py
suitescript_auditor/core/io/: discovery.py  hashing.py  workspace.py  zip_handler.py
suitescript_auditor/core/jobs/: cost_tracker.py  models.py  queue.py  runner.py
suitescript_auditor/core/llm/: dossier.py  oci_client.py  orchestrator.py  router.py
suitescript_auditor/core/parsing/: ast_js.py  line_map.py  module_resolver.py  suitescript_header.py  symbol_index.py
suitescript_auditor/core/rules/: base.py  scoring.py  verifier.py
suitescript_auditor/tests/: __init__.py  test_config.py  test_docs_writer.py  test_dossier.py  test_git_providers.py  test_git_publish.py  test_job_queue.py  test_job_runner.py  test_oci_client.py  test_parser_line_map.py  test_router.py  test_rules.py  test_tk_views.py  test_zip_workspace.py
suitescript_auditor/ui/: shell.py
suitescript_auditor/ui/components/: badges.py  cards.py  code_viewer.py  dialogs.py  tables.py
suitescript_auditor/ui/theme/: oracle_like_style.py  tokens.py
suitescript_auditor/ui/views/: __init__.py  common.py  docs_browser.py  file_review.py  history.py  new_analysis.py  processing_center.py  results.py  run_log.py  settings.py
(+22 files in other folders)
